[gd_scene load_steps=13 format=2]

[ext_resource path="res://image/Cat Sprite Sheet.png" type="Texture" id=1]
[ext_resource path="res://script/Cat.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 167, 32, 33 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 167, 32, 33 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 167, 32, 33 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 167, 32, 33 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 167, 32, 33 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 160, 167, 32, 33 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 167, 32, 33 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 224, 167, 32, 33 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 10.9324, 7.15063 )

[node name="Cat" type="KinematicBody2D"]
scale = Vector2( 2.6869, 2.6869 )
collision_layer = 32
collision_mask = 787
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )
animation = "Run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.40946, 2.23253 )
scale = Vector2( 0.439154, 0.43364 )
shape = SubResource( 10 )

[node name="sideSensor" type="RayCast2D" parent="."]
position = Vector2( 2.60523, 2.60523 )
enabled = true
cast_to = Vector2( 2.60524, 2.86102e-06 )
collision_mask = 259

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 1025

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.40946, 2.23253 )
scale = Vector2( 0.614538, 0.606822 )
shape = SubResource( 10 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="blink" type="Timer" parent="Timer"]
wait_time = 0.5

[node name="Timer2" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer/blink" to="." method="_on_blink_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
